--- a/style.css
+++ b/style.css
@@ -34,6 +34,8 @@ label {
     display: block;
     font-size: 14px;
     margin: 10px 0 5px;
+    font-size: larger;
+    font-weight: bold;
 }
 
 input {
@@ -56,6 +58,8 @@ button {
     font-size: 16px;
     cursor: pointer;
     transition: background 0.3s ease;
+    font-size: larger;
+    font-weight: bold;
 }
 
 button:hover {
@@ -100,6 +104,17 @@ button.hidden {
     font-weight: bold;
     color: #0066cc;
     margin-bottom: 20px;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+}
+
+footer p {
+    font-size: larger;
+    font-weight: bold;
+
 }
 
 @media (max-width: 480px) {
