--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
 }
 
 body {
-    font-family: 'Arial', sans-serif;
-    background: linear-gradient(135deg, #4facfe, #00f2fe);
+    font-family: 'Inter', sans-serif;
+    background: linear-gradient(135deg, #191c1e, #53076ced);
     color: #333;
     display: flex;
     justify-content: center;
@@ -16,8 +16,10 @@ body {
 }
 
 .container {
-    background: #fff;
+    background: linear-gradient(135deg, #d2e1eb, #73e310);
     padding: 20px;
+    border: 8px solid #000;
+    border-style: double;
     border-radius: 10px;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
     max-width: 500px;
@@ -27,7 +29,7 @@ body {
 h1 {
     text-align: center;
     margin-bottom: 20px;
-    color: #0066cc;
+    color: #000;
 }
 
 label {
@@ -45,13 +47,14 @@ input {
     border: 1px solid #ddd;
     border-radius: 5px;
     font-size: 16px;
+    font-style: italic;
 }
 
 button {
     display: block;
     width: 100%;
     padding: 10px 20px;
-    background: #0066cc;
+    background: linear-gradient(135deg, #191c1e, #5232a3);
     color: #fff;
     border: none;
     border-radius: 5px;
